# llmcontract

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/: CNAME  index.html
docs/builder/: index.html
docs/findings/: index.html
examples/langchain_booking/: README.md  booking_agent.py  booking_agent_middleware.py  booking_agent_submodule.py  requirements.txt  run_all.py  sweep.py  tasks.py
examples/langchain_booking/reports/: findings.md
examples/langchain_booking/trajectories/v1/: 01_clear_dl317__claude-haiku-4-5-20251001__trial0.jsonl  01_clear_dl317__claude-haiku-4-5-20251001__trial1.jsonl  01_clear_dl317__claude-opus-4-7__trial0.jsonl  01_clear_dl317__claude-opus-4-7__trial1.jsonl  01_clear_dl317__claude-sonnet-4-6__trial0.jsonl  01_clear_dl317__claude-sonnet-4-6__trial1.jsonl  02_clear_aa101__claude-haiku-4-5-20251001__trial0.jsonl  02_clear_aa101__claude-haiku-4-5-20251001__trial1.jsonl  02_clear_aa101__claude-opus-4-7__trial0.jsonl  02_clear_aa101__claude-opus-4-7__trial1.jsonl  02_clear_aa101__claude-sonnet-4-6__trial0.jsonl  (+49 more)
llmcontract/: __init__.py
llmcontract/dsl/: __init__.py  ast.py  parser.py
llmcontract/integration/: __init__.py  client.py  exceptions.py  langfuse.py  middleware.py  types.py
llmcontract/langchain/: __init__.py  exceptions.py  fsm.py  middleware.py  monitor.py  tool_ref.py
llmcontract/monitor/: __init__.py  automaton.py  monitor.py
llmcontract/tests/: test_integration.py  test_langchain_fsm.py  test_langchain_middleware.py  test_langchain_monitor.py  test_langchain_tool_ref.py  test_langfuse.py  test_monitor.py  test_parser.py
site/: index.html
skills/protocol-builder/: SKILL.md
skills/protocol-builder/scripts/: validate.py
