[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcontract"
version = "0.1.0"
description = "Runtime monitor for LLM agent interaction protocols based on session type theory"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["llmcontract*"]
